--- a/main.html
+++ b/main.html
@@ -483,6 +483,55 @@
                 <p><B>Key points and concepts: Global awareness, Diversity, Inclusion, Cross-cultural communication, Perspective-taking</B></p>
             </div>
         </div>
+        <div class="interpersonal-section">
+            <h2>Created By</h2>
+            <div class="content-grid" style="grid-template-columns: repeat(5, 1fr); gap: 15px; margin-top: 20px;">
+                <div class="content-card" style="padding: 20px;">
+                    <i data-lucide="user-circle-2"></i>
+                    <h3>Patrick</h3>
+                    <h3>Sandquist</h3>
+                    <p style="font-size: 0.9em; color: #3498db; margin: 8px 0;">Front-end Developer</p>
+                    <p style="font-size: 0.8em; margin: 5px 0;">Computer Science</p>
+                    <p style="font-size: 0.8em; font-style: italic; color: #666;">Platform Development & UX</p>
+                </div>
+
+                <div class="content-card" style="padding: 20px;">
+                    <i data-lucide="user-circle-2"></i>
+                    <h3>Nancy</h3>
+                    <h3>Guerrero</h3>
+                    <p style="font-size: 0.9em; color: #3498db; margin: 8px 0;">Communications Expert</p>
+                    <p style="font-size: 0.8em; margin: 5px 0;">Communication</p>
+                    <p style="font-size: 0.8em; font-style: italic; color: #666;">Cultural Integration & Researcher</p>
+                </div>
+
+                <div class="content-card" style="padding: 20px;">
+                    <i data-lucide="user-circle-2"></i>
+                    <h3>Grant</h3>
+                    <h3>Zwald</h3>
+                    <p style="font-size: 0.9em; color: #3498db; margin: 8px 0;">Digital Learning Specialist</p>
+                    <p style="font-size: 0.8em; margin: 5px 0;">Educational Technology</p>
+                    <p style="font-size: 0.8em; font-style: italic; color: #666;">Research Lead & Content Strategy</p>
+                </div>
+
+                <div class="content-card" style="padding: 20px;">
+                    <i data-lucide="user-circle-2"></i>
+                    <h3>James</h3>
+                    <h3>Tanasyah</h3>
+                    <p style="font-size: 0.9em; color: #3498db; margin: 8px 0;">Design Specialist</p>
+                    <p style="font-size: 0.8em; margin: 5px 0;">Computer Science</p>
+                    <p style="font-size: 0.8em; font-style: italic; color: #666;">Research & Implementation</p>
+                </div>
+
+                <div class="content-card" style="padding: 20px;">
+                    <i data-lucide="user-circle-2"></i>
+                    <h3>Ashton</h3>
+                    <h3>Jenkins</h3>
+                    <p style="font-size: 0.9em; color: #3498db; margin: 8px 0;">Creative Content Specialist</p>
+                    <p style="font-size: 0.8em; margin: 5px 0;">Communication</p>
+                    <p style="font-size: 0.8em; font-style: italic; color: #666;">Content Development & Assessment</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 
