--- a/main.html
+++ b/main.html
@@ -509,7 +509,7 @@
                     <h3>Grant</h3>
                     <h3>Zwald</h3>
                     <p style="font-size: 0.9em; color: #3498db; margin: 8px 0;">Digital Learning Specialist</p>
-                    <p style="font-size: 0.8em; margin: 5px 0;">Educational Technology</p>
+                    <p style="font-size: 0.8em; margin: 5px 0;">Integrated Studies</p>
                     <p style="font-size: 0.8em; font-style: italic; color: #666;">Research Lead & Content Strategy</p>
                 </div>
 
