--- a/main.html
+++ b/main.html
@@ -482,6 +482,14 @@
                 <img src="https://images.unsplash.com/photo-1529271230144-e8c648ef570d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cultural Competence">
                 <p><B>Key points and concepts: Global awareness, Diversity, Inclusion, Cross-cultural communication, Perspective-taking</B></p>
             </div>
+            <div class="content-card">
+                <i data-lucide="users"></i>
+                <h3>Working Theories</h3>
+                <p>Using theories from class and implementing them into the presentation.</p>
+                <img src="https://images.unsplash.com/photo-1491975474562-1f4e30bc9468?q=80&w=3987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Building Relationships">
+                <p>'These theories help explain how <strong>communication patterns</strong> evolve in educational settings, from early childhood through higher education, as relationships develop and change over time.'</p>
+
+            </div>
         </div>
         <div class="interpersonal-section">
             <h2>Created By</h2>
@@ -1310,7 +1318,13 @@
                 'Master techniques for building team morale',
                 'Practice creating positive and supportive environments',
                 'Build skills in empathetic leadership and support'
-            ]
+            ],
+            'Working Theories': [
+                '<B>Key points and concepts: Theoretical frameworks, Relationship development, Communication patterns, Self-disclosure, Dialectical tensions</B>',
+                '<strong>Social Exchange Theory</strong>: In educational settings, this theory explains how students and teachers evaluate their <strong>communication relationships</strong> based on <strong>costs</strong> and <strong>rewards</strong>. For example, PreK students expect an <strong>open</strong> and <strong>nurturing environment</strong> while teachers expect <strong>respect</strong> and <strong>engagement</strong> in return.',
+                '<strong>Social Penetration Theory</strong>: Describes how <strong>interpersonal relationships</strong> develop through increasing levels of <strong>self-disclosure</strong>. In educational contexts, this manifests as students gradually sharing more about themselves as they build <strong>trust</strong> with teachers and peers, moving from surface-level to more <strong>personal communication</strong>.',
+                '<strong>Dialectical Theory</strong>: Explains the <strong>opposing tensions</strong> in relationships. In classroom settings, this includes balancing <strong>independence</strong> vs. <strong>dependence</strong> (students wanting autonomy while needing guidance), <strong>openness</strong> vs. <strong>privacy</strong> (sharing vs. maintaining boundaries), and <strong>predictability</strong> vs. <strong>novelty</strong> (routine vs. engaging new experiences).',
+                ],
         };
 
         return detailsMap[cardTitle] || [
